force-app/main/default/objects/GfAmsGoods__c/GfAmsGoods__c.object-meta.xml
<CustomObject>
    <label>본사 상품 Old</label>
    <nameField>
        <label>Goods Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>