force-app/main/default/objects/GfAmsGoods__c/fields/Barcode__c.field-meta.xml
<CustomField>
    <fullName>Barcode__c</fullName>
    <description>바코드</description>
    <label>Barcode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>