force-app/main/default/objects/GfAmsGoods__c/fields/BasePrice__c.field-meta.xml
<CustomField>
    <fullName>BasePrice__c</fullName>
    <description>기준 단가</description>
    <label>Base Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>