force-app/main/default/objects/GfAmsGoods__c/fields/BoxAcquisitionQuantities__c.field-meta.xml
<CustomField>
    <fullName>BoxAcquisitionQuantities__c</fullName>
    <description>박스 입수수량</description>
    <label>Box Acquisition Quantities</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>