force-app/main/default/objects/GfAmsGoods__c/fields/BoxBarcode__c.field-meta.xml
<CustomField>
    <fullName>BoxBarcode__c</fullName>
    <description>박스 바코드</description>
    <label>Box Barcode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>