force-app/main/default/objects/GfAmsGoods__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>분류</description>
    <label>Class</label>
    <length>20</length>
    <type>Text</type>
</CustomField>