force-app/main/default/objects/GfAmsGoods__c/fields/GoodsCode__c.field-meta.xml
<CustomField>
    <fullName>GoodsCode__c</fullName>
    <label>Goods Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>