force-app/main/default/objects/GfAmsGoods__c/fields/GoodsNameEnglish__c.field-meta.xml
<CustomField>
    <fullName>GoodsNameEnglish__c</fullName>
    <description>상품 이름(English)</description>
    <label>Goods Name English</label>
    <length>100</length>
    <type>Text</type>
</CustomField>