force-app/main/default/objects/GfAmsGoods__c/fields/GoodsShortName__c.field-meta.xml
<CustomField>
    <fullName>GoodsShortName__c</fullName>
    <description>상품 단축 명</description>
    <label>Goods Short Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>