force-app/main/default/objects/GfAmsGoods__c/fields/GoodsType__c.field-meta.xml
<CustomField>
    <fullName>GoodsType__c</fullName>
    <description>상품 유형</description>
    <label>Goods Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Type</valueSetName>
    </valueSet>
</CustomField>