force-app/main/default/objects/GfAmsGoods__c/fields/GraceAPrice__c.field-meta.xml
<CustomField>
    <fullName>GraceAPrice__c</fullName>
    <description>A 등급가</description>
    <label>GraceAPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>