force-app/main/default/objects/GfAmsGoods__c/fields/GraceBPrice__c.field-meta.xml
<CustomField>
    <fullName>GraceBPrice__c</fullName>
    <description>B 등급가</description>
    <label>GraceBPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>