force-app/main/default/objects/GfAmsGoods__c/fields/GraceCPrice__c.field-meta.xml
<CustomField>
    <fullName>GraceCPrice__c</fullName>
    <description>C 등급가</description>
    <label>GraceCPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>