force-app/main/default/objects/GfAmsGoods__c/fields/GraceDPrice__c.field-meta.xml
<CustomField>
    <fullName>GraceDPrice__c</fullName>
    <description>D 등급가</description>
    <label>GraceDPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>