force-app/main/default/objects/GfAmsGoods__c/fields/GraceEPrice__c.field-meta.xml
<CustomField>
    <fullName>GraceEPrice__c</fullName>
    <description>E 등급가</description>
    <label>GraceEPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>