force-app/main/default/objects/GfAmsGoods__c/fields/GraceFPrice__c.field-meta.xml
<CustomField>
    <fullName>GraceFPrice__c</fullName>
    <description>F 등급가</description>
    <label>GraceFPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>