force-app/main/default/objects/GfAmsGoods__c/fields/GraceGPrice__c.field-meta.xml
<CustomField>
    <fullName>GraceGPrice__c</fullName>
    <description>G 등급가</description>
    <label>GraceGPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>