force-app/main/default/objects/GfAmsGoods__c/fields/GraceHPrice__c.field-meta.xml
<CustomField>
    <fullName>GraceHPrice__c</fullName>
    <description>H 등급가</description>
    <label>GraceHPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>