force-app/main/default/objects/GfAmsGoods__c/fields/GraceIPrice__c.field-meta.xml
<CustomField>
    <fullName>GraceIPrice__c</fullName>
    <description>I 등급가</description>
    <label>GraceIPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>