force-app/main/default/objects/GfAmsGoods__c/fields/GraceJPrice__c.field-meta.xml
<CustomField>
    <fullName>GraceJPrice__c</fullName>
    <description>J 등급가</description>
    <label>GraceJPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>