force-app/main/default/objects/GfAmsGoods__c/fields/Maker__c.field-meta.xml
<CustomField>
    <fullName>Maker__c</fullName>
    <description>제조사</description>
    <label>Maker</label>
    <length>100</length>
    <type>Text</type>
</CustomField>