force-app/main/default/objects/GfAmsGoods__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Material</valueSetName>
    </valueSet>
</CustomField>