force-app/main/default/objects/GfAmsGoods__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>원산지</description>
    <label>Origin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>