force-app/main/default/objects/GfAmsGoods__c/fields/ParentGoods__c.field-meta.xml
<CustomField>
    <fullName>ParentGoods__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>대표상품</description>
    <label>Parent Goods</label>
    <referenceTo>GfAmsGoods__c</referenceTo>
    <relationshipName>Goods</relationshipName>
    <type>Lookup</type>
</CustomField>