force-app/main/default/objects/GfAmsGoods__c/fields/PurchaseEndDate__c.field-meta.xml
<CustomField>
    <fullName>PurchaseEndDate__c</fullName>
    <description>발주 종료 일자</description>
    <label>Purchase End Date</label>
    <type>Date</type>
</CustomField>