force-app/main/default/objects/GfAmsGoods__c/fields/PurchaseLimit__c.field-meta.xml
<CustomField>
    <fullName>PurchaseLimit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>본사 발주제한</description>
    <label>Purchase Limit</label>
    <type>Checkbox</type>
</CustomField>