force-app/main/default/objects/GfAmsGoods__c/fields/PurchaseLimitDateTime__c.field-meta.xml
<CustomField>
    <fullName>PurchaseLimitDateTime__c</fullName>
    <description>발주제한일시</description>
    <label>Purchase Limit Date Time</label>
    <type>DateTime</type>
</CustomField>