force-app/main/default/objects/GfAmsGoods__c/fields/PurchaseStartDate__c.field-meta.xml
<CustomField>
    <fullName>PurchaseStartDate__c</fullName>
    <description>발주 시작 일자</description>
    <label>Purchase Start Date</label>
    <type>Date</type>
</CustomField>