force-app/main/default/objects/GfAmsGoods__c/fields/PurchaseUpper__c.field-meta.xml
<CustomField>
    <fullName>PurchaseUpper__c</fullName>
    <description>발주 상한 수량</description>
    <label>Purchase Upper</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>