force-app/main/default/objects/GfAmsGoods__c/fields/PurchaseVenderType__c.field-meta.xml
<CustomField>
    <fullName>PurchaseVenderType__c</fullName>
    <description>유형</description>
    <label>Purchase Vender Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PurchaseVendorType</valueSetName>
    </valueSet>
</CustomField>