force-app/main/default/objects/GfAmsGoods__c/fields/PurchaseVendor__c.field-meta.xml
<CustomField>
    <fullName>PurchaseVendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>매입 거래처</description>
    <label>Purchase Vendor</label>
    <referenceTo>VendorPurchase__c</referenceTo>
    <relationshipName>Goods</relationshipName>
    <type>Lookup</type>
</CustomField>