force-app/main/default/objects/GfAmsGoods__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Size</valueSetName>
    </valueSet>
</CustomField>